# lora-dashboard-runpod

./: .gitignore  DOWNLOAD_FIX_SUMMARY.md  PROBLEM_SOLUTION_SUMMARY.md  README.md  TESTING_GUIDE.md  diagnose_process_problem.md  package-lock.json  package.json  simple_test_results.json
Serverless/: CONFIG_SETUP_GUIDE.md  HARDCODED_TOKENS.md  README.md  SECURE_TOKENS_UPDATE.md
Serverless/Backend/: .gitignore  AUTOMATED_DEPLOYMENT.md  DUAL_MODE_GUIDE.md  Dockerfile  Dokumentacja.txt  LOCAL_MOCK_TESTING_GUIDE.md  LOCAL_TESTING_GUIDE.md  LOGGING_GUIDE.md  LOGGING_QUICK_GUIDE.md  QUICK_START.md  README.md  RUNPOD_COMPLIANCE_REPORT.md  RUNPOD_DEPLOYMENT_GUIDE.md  RUNPOD_ENDPOINT_COMPLIANCE_REPORT.md  config.env.template  deploy-to-runpod.sh  hub.json  mcp_runpod_deploy.py  mock_config.env  pyproject.toml  pytest.ini  run_tests.py  runpod.yaml  test_input.json  test_local.py  test_report.json  tests.json
Serverless/Backend/app/: main.py  rp_handler.py
Serverless/Backend/app/adapters/: runpod_adapter.py
Serverless/Backend/app/core/: config.py  logger.py  models.py
Serverless/Backend/app/services/: gpu_manager.py  lora_service.py  mock_services.py  process_manager.py  storage_service.py
Serverless/Backend/app/utils/: config_loader.py
Serverless/Backend/test_inputs/: generate_test.json  lora_models_test.json  processes_test.json  train_test.json
Serverless/Backend/tests/: __init__.py  conftest.py  test_api_endpoints.py  test_performance.py  test_runpod_adapter.py  test_services.py
Serverless/FastBackend/: .gitignore  DEPLOYMENT_GUIDE.md  README.md  (+9 more)
docs/: angular_vs_other.md  deploy_backend_runpod.md  deploy_front.md
(+141 files in other folders)
